--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Effective JavaScript: Frogger</title>
+    <title>Classic Arcade Game</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="winnerAlert">
+        <h3>You won!</h3>
+        <button id="button" type="button">start new game</button>
+    </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
