Add GitHub link to repository

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <button id="button" type="button">start new game</button>
     </div>
 
+    <footer>
+        Check the code out in the <a href="https://github.com/AnnaJanuszewska/Classic-Arcade-Game" target="_blank"> GitHub repository</a>.
+    </footer>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
